force-app/main/default/objects/SyncUsersSettings__c/SyncUsersSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Sync Users Settings</label>
</CustomObject>