force-app/main/default/objects/SyncUsersSettings__c/fields/AllowNotifications__c.field-meta.xml
<CustomField>
    <fullName>AllowNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Чи висилати нотифікації юзерам з групи AdminsForEmail</description>
    <label>Allow Notifications</label>
    <type>Checkbox</type>
</CustomField>