force-app/main/default/objects/SyncUsersSettings__c/fields/LastRun__c.field-meta.xml
<CustomField>
    <fullName>LastRun__c</fullName>
    <description>Timestamp останнього успішного запуску</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>