force-app/main/default/objects/SyncUsersSettings__c/fields/LastScheduleUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastScheduleUpdate__c</fullName>
    <label>Last Schedule Update</label>
    <type>DateTime</type>
</CustomField>