force-app/main/default/objects/SyncUsersSettings__c/fields/ScheduleCron__c.field-meta.xml
<CustomField>
    <fullName>ScheduleCron__c</fullName>
    <label>Schedule Cron</label>
    <length>255</length>
    <type>Text</type>
</CustomField>