force-app/main/default/objects/SyncUsersSettings__c/fields/ScheduleError__c.field-meta.xml
<CustomField>
    <fullName>ScheduleError__c</fullName>
    <label>ScheduleError</label>
    <length>255</length>
    <type>Text</type>
</CustomField>